--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "expo": "~49.0.15",
     "expo-app-loading": "^2.1.1",
     "expo-font": "~11.4.0",
+    "expo-image": "~1.3.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "expo-image": "~1.3.5"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
